--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
 annotated-types==0.7.0
 anyio==4.9.0
 atproto==0.0.61
-blurhash==1.1.4
 certifi==2025.7.9
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 cryptography==45.0.5
-datetime==5.5
-decorator==5.2.1
 dnspython==2.7.0
 filetype==1.2.0
 future==1.0.0
@@ -18,20 +15,15 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 libipld==3.1.1
-mastodon-py==2.0.1
 oauthlib==3.3.1
 pillow==11.3.0
 pycparser==2.22
 pydantic==2.11.7
 pydantic-core==2.33.2
-python-dateutil==2.9.0.post0
-python-magic-bin==0.4.14
+python-magic==0.4.27
 pytumblr==0.1.2
-pytz==2025.2
 requests==2.32.4
 requests-oauthlib==2.0.0
-setuptools==80.9.0
-six==1.17.0
 sniffio==1.3.1
 tenacity==9.1.2
 tweepy==4.16.0
@@ -40,4 +32,3 @@ typing-inspection==0.4.1
 urllib3==2.5.0
 watchdog==6.0.0
 websockets==13.1
-zope-interface==7.2
