--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,40 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
 annotated-types==0.7.0
-anyio==4.9.0
-atproto==0.0.61
-certifi==2025.7.9
-cffi==1.17.1
-charset-normalizer==3.4.2
-click==8.2.1
-colorama==0.4.6
-cryptography==45.0.5
-dnspython==2.7.0
+anyio==4.11.0
+atproto==0.0.63
+attrs==25.4.0
+audioop-lts==0.2.2
+certifi==2025.11.12
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+cryptography==45.0.7
+discord-py==2.6.4
+dnspython==2.8.0
 filetype==1.2.0
+frozenlist==1.8.0
 future==1.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
-idna==3.10
-libipld==3.1.1
+idna==3.11
+libipld==3.2.0
+multidict==6.7.0
 oauthlib==3.3.1
-pillow==11.3.0
-pycparser==2.22
-pydantic==2.11.7
-pydantic-core==2.33.2
-python-magic==0.4.27
+propcache==0.4.1
+pycparser==2.23
+pydantic==2.12.4
+pydantic-core==2.41.5
 pytumblr==0.1.2
-requests==2.32.4
+requests==2.32.5
 requests-oauthlib==2.0.0
 sniffio==1.3.1
 tenacity==9.1.2
 tweepy==4.16.0
-typing-extensions==4.14.1
-typing-inspection==0.4.1
+typing-extensions==4.15.0
+typing-inspection==0.4.2
 urllib3==2.5.0
-watchdog==6.0.0
-websockets==13.1
+websockets==15.0.1
+yarl==1.22.0
