--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,8 @@ idna==3.11
 libipld==3.2.0
 multidict==6.7.0
 oauthlib==3.3.1
+pillow==12.0.0
+pip==25.1.1
 propcache==0.4.1
 pycparser==2.23
 pydantic==2.12.4
